#76 [Vin/Vid] Fixed expand icon alignment in single story page

--- a/core/static/css/v2/pages/story/story.less
+++ b/core/static/css/v2/pages/story/story.less
@@ -136,6 +136,9 @@
   }
 }
 .rich-text {
+  .left, .right {
+    float: none;
+  }
   i{
       &.fa-expand {
         font-size: 35px !important;
